# LovassyApp

./: .dockerignore  .gitignore  README.md  docker-compose-dev.yml
.github/: dependabot.yml
.github/workflows/: api-docs-deploy.yml  backboard-build.yml  backboard-release.yml  blueboard-build.yml  boardlight-build.yml  deploy.yml  new-relic-change-tracking.yml
Backboard/: .gitignore  README.md  package.json  pnpm-lock.yaml
Backboard/src/: main.tsx  preferencesStore.ts
Backboard/src-api/: Cargo.toml  README.md
Backboard/src-api/docs/: AuthApi.md  AuthLoginResponse.md  AuthRefreshResponse.md  AuthViewControlResponse.md  FeedItemsApi.md  GradesApi.md  ImageVotingChoicesApi.md  ImageVotingEntriesApi.md  ImageVotingEntryImagesApi.md  ImageVotingsApi.md  ImageVotingsCreateImageVotingRequestBody.md  ImageVotingsCreateImageVotingResponse.md  ImageVotingsIndexImageVotingChoicesResponse.md  ImageVotingsIndexImageVotingEntriesResponse.md  ImageVotingsUpdateImageVotingRequestBody.md  ImageVotingsViewImageVotingChoiceResponse.md  ImageVotingsViewImageVotingChoiceResponseImageVoting.md  ImageVotingsViewImageVotingChoiceResponseImageVotingEntry.md  ImageVotingsViewImageVotingEntryResponse.md  ImageVotingsViewImageVotingResponse.md  ImageVotingsViewImageVotingResponseImageVotingAspect.md  ImageVotingsViewImageVotingResultsResponse.md  ImageVotingsViewImageVotingResultsResponseEntry.md  ImportApi.md  ImportKeysApi.md  LoloRequestCreatedNotifiersApi.md  LoloRequestsApi.md  LolosApi.md  OwnedItemsApi.md  PermissionsApi.md  ProductsApi.md  QrCodesApi.md  SchoolIndexGradesResponse.md  ShopCreateOwnedItemResponse.md  ShopCreateOwnedItemResponseProduct.md  ShopCreateProductRequestBody.md  ShopCreateProductResponse.md  ShopIndexOwnLolosResponse.md  ShopIndexOwnLolosResponseCoin.md  ShopIndexOwnOwnedItemsResponse.md  (+14 more)
Backboard/src-api/src/apis/: auth_api.rs  configuration.rs  feed_items_api.rs  grades_api.rs  image_voting_choices_api.rs  image_voting_entries_api.rs  image_voting_entry_images_api.rs  image_votings_api.rs  import_api.rs  import_keys_api.rs  lolo_request_created_notifiers_api.rs  lolo_requests_api.rs  lolos_api.rs  mod.rs  owned_items_api.rs  permissions_api.rs  products_api.rs  qr_codes_api.rs  status_api.rs  user_groups_api.rs  users_api.rs
Backboard/src-api/src/models/: auth_create_user_group_request_body.rs  auth_create_user_group_response.rs  auth_index_permissions_response.rs  auth_index_user_groups_response.rs  auth_login_request_body.rs  auth_login_response.rs  auth_login_response_user.rs  auth_refresh_response.rs  auth_refresh_response_user.rs  auth_reset_password_request_body.rs  auth_send_password_reset_request_body.rs  auth_update_user_group_request_body.rs  auth_view_control_response.rs  auth_view_control_response_session.rs  auth_view_control_response_user.rs  auth_view_user_group_response.rs  feed_index_feed_items_response.rs  image_votings_choose_image_voting_entry_request_body.rs  image_votings_create_image_voting_entry_increment_request_body.rs  image_votings_create_image_voting_entry_request_body.rs  image_votings_create_image_voting_entry_response.rs  image_votings_create_image_voting_request_body.rs  image_votings_create_image_voting_request_body_image_voting_aspect.rs  image_votings_create_image_voting_response.rs  image_votings_create_image_voting_response_image_voting_aspect.rs  image_votings_delete_image_voting_entry_increment_request_body.rs  image_votings_index_image_voting_choices_response.rs  image_votings_index_image_voting_choices_response_image_voting_entry.rs  (+87 more)
Backboard/src-tauri/: Cargo.toml  tauri.conf.json  test_grades.csv  test_students.csv
Backboard/src-tauri/capabilities/: desktop.json  migrated.json
Backboard/src-tauri/src/: cryptography.rs  grades_processor.rs  main.rs
Blueboard/: Blueboard.csproj
Blueboard/Properties/: launchSettings.json
Boardlight/: package.json  pnpm-lock.yaml  vite.config.ts
docker/: Dockerfile.blueboard-dev  Dockerfile.boardlight-dev
(+5 files in other folders)
