[package]
name = "backboard"
version = "2.1.1"
description = "Backboard - Desktop App for LovassyApp"
authors = ["Xeretis"]
license = "MIT"
repository = "https://github.com/LovassyApp/LovassyApp"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = "2"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde_json = "1.0"
api = { path = "../src-api" }
crypto-hash = "0.3.4"
base64 = "0.22.1"
pqc_kyber = { version = "0.7.1", features = ["std"] }
rand = "0.8.5"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
libaes = "0.7.0"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
log = "0.4.28"
csv = "1.3.1"
ftail = "0.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
