[package]
name = "backboard"
version = "2.1.1"
description = "Backboard - Desktop App for LovassyApp"
authors = ["Xeretis"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/LovassyApp/LovassyApp"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
api = { path = "../src-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crypto-hash = "0.3"
base64 = "0.22"
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"
libaes = "0.7"
ftail = { version = "0.3", features = ["console", "formatted", "single_file"], default-features = false }
log = "0.4"
csv = "1.4"
safe_pqc_kyber = { version = "0.6", default-features = false, features = ["std"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

# quits the app on panic instead of letting down the JS promise, that'd wait forever
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
